src/objects/Band__c.object
<CustomObject>
    <fields>
        <fullName>Home_City__c</fullName>
        <label>Home City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_State__c</fullName>
        <label>Home State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Url__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour</label>
        <referenceTo>Tour__c</referenceTo>
        <relationshipLabel>Bands</relationshipLabel>
        <relationshipName>Bands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <label>Transportation</label>
        <picklist>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Band</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Band Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>